# HifiTune

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
resources/: keyboard_shortcuts.txt  lookandfeel.json
src/: SharedResources.cpp  SharedResources.h
src/analysis/: AnalysisPipeline.cpp  AnalysisPipeline.h  AnalyzerRegistry.cpp  AnalyzerRegistry.h  AudioBufferSource.cpp  AudioBufferSource.h  DiffSingerDecomposer.cpp  DiffSingerDecomposer.h  HarmonicNoiseSeparator.cpp  HarmonicNoiseSeparator.h  MelSpectrogram.cpp  MelSpectrogram.h  MidiNoteExtractor.cpp  MidiNoteExtractor.h  PitchAnalyzer.cpp  PitchAnalyzer.h  SilenceSegmenter.cpp  SilenceSegmenter.h  Stretching.cpp  Stretching.h
src/app/: Main.cpp
src/ara/: AraDocumentController.cpp  AraDocumentController.h  AraIntegration.cpp  AraIntegration.h  AraRegionMapper.cpp  AraRegionMapper.h
src/commands/: CommandIDs.h  CommandManager.cpp  CommandManager.h
src/inference/: ModelConfig.cpp  ModelConfig.h  ModelLoader.cpp  ModelLoader.h  ModelRegistry.cpp  ModelRegistry.h  OnnxRuntimeEngine.cpp  OnnxRuntimeEngine.h
src/midi/: MidiExtractor.h  MidiReferenceManager.cpp  MidiReferenceManager.h  MidiReferenceSnapper.cpp  MidiReferenceSnapper.h  SomeMidiExtractor.cpp  SomeMidiExtractor.h
src/model/: AnalysisConfigState.cpp  AnalysisConfigState.h  ClipState.cpp  ClipState.h  MidiNoteState.cpp  MidiNoteState.h  MidiReferenceState.cpp  MidiReferenceState.h  NoteState.cpp  NoteState.h  PitchCurveState.cpp  PitchCurveState.h  ProjectState.cpp  ProjectState.h  SegmentState.cpp  SegmentState.h  TensionState.cpp  TensionState.h  TrackState.cpp  TrackState.h
src/pitch/: FcpePitchDetector.cpp  FcpePitchDetector.h  PitchDetector.cpp  PitchDetector.h  RmvpePitchDetector.cpp  RmvpePitchDetector.h
src/plugin/: PluginARADocumentController.cpp  PluginARADocumentController.h  PluginARAPlaybackRenderer.cpp  PluginARAPlaybackRenderer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/separation/: DiffSingerDecomposer.h  HarmonicNoiseSeparator.cpp  HarmonicNoiseSeparator.h  VocalRemoverSeparator.cpp  VocalRemoverSeparator.h
src/tasks/: AnalysisTask.cpp  AnalysisTask.h  ProgressReporter.cpp  ProgressReporter.h  TaskQueue.cpp  TaskQueue.h
src/ui/: EditorMode.h  LookAndFeel.cpp  LookAndFeel.h  MainEditor.cpp  MainEditor.h  MidiReferenceOverlay.cpp  MidiReferenceOverlay.h  NoteViewComponent.cpp  NoteViewComponent.h  OverviewComponent.cpp  OverviewComponent.h  PitchViewComponent.cpp  PitchViewComponent.h  QuickHelpOverlay.cpp  QuickHelpOverlay.h  SidebarComponent.cpp  SidebarComponent.h  TimelineComponent.cpp  TimelineComponent.h  ToolbarComponent.cpp  ToolbarComponent.h  ViewportController.cpp  ViewportController.h
src/ui/history/: HistoryComponent.cpp  HistoryComponent.h
src/ui/lookandfeel/: EditorLookAndFeel.cpp  EditorLookAndFeel.h
src/vocoder/: NsfHifiGanVocoder.cpp  NsfHifiGanVocoder.h  Vocoder.cpp  Vocoder.h
tools/: README.md  onnx_export.py
tools/onnx/: _common.py  export_fcpe.py  export_nsfhifigan.py  export_rmvpe.py  validate_model.py
